Fix overflow in expanded modal

--- a/src/components/ImagePreview/styles.css
+++ b/src/components/ImagePreview/styles.css
@@ -48,3 +48,8 @@
         }
     }
 }
+
+.expanded-modal {
+    width: var(--dui-width-max-modal);
+    height: var(--dui-height-max-modal);
+}
